# bangla_buzz

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.json  main.py  pyproject.toml  requirements.txt
data/: clean_news.csv  news_with_outliers.csv  news_with_sentiment.csv  raw_data.csv  topics.json
report/: ieee_banglabuzz.tex
src/: dashboard.py  outlier.py  preprocess.py  scraper.py  sentiment.py  topics.py
